# Lab4OS

./: CMakeLists.txt  README.md
messageManager/: messageManager.cpp  messageManager.h
receiver/: CMakeLists.txt  receiver.cpp  receiver.h
sender/: CMakeLists.txt  sender.cpp  sender.h
testManager/: CMakeLists.txt  testManager.cpp  testManager.h
